--- a/src/Components/login.module.css
+++ b/src/Components/login.module.css
@@ -14,7 +14,6 @@
   background-position: center;
   color: white;
 
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,8 +27,10 @@
   gap: 30px;
   
   padding: 20px;
-  min-width: 50vw;
-  max-width: 420px;
+  width: 400px;
+  /* min-width: 50vw;
+
+  max-width: 420px; */
 
   border: 2px solid rgba(255,255,255, 0.2);
   border-radius: 10px;
@@ -54,7 +55,9 @@ span:hover{
   border-radius: 20px;
   padding: 10px;
   border: none;
-  background-color: rgb(24, 120, 149)
+  /* background-color: rgb(24, 120, 149) */
+  background-color: rgb(53, 174, 53);
+  font-weight: bold;
 
 }
 
