--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,12 @@ body{
   color: white;
   font-family: Arial;
 }
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
