--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body{
   background-color: #120018;
   color: white;
   font-family: Arial;
+  /* background-image: url('/bgimg2.jpg'); */
 }
 *::-webkit-scrollbar {
   display: none;
